Bug 299625 - Tabs not restored when rekonq is started by clicking on a link
Summary: Tabs not restored when rekonq is started by clicking on a link
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.9.1
Platform: Ubuntu Linux
: NOR critical
Target Milestone: 0.10
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-08 14:22 UTC by SZÉKELYI Szabolcs
Modified: 2012-06-20 09:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description SZÉKELYI Szabolcs 2012-05-08 14:22:56 UTC
If rekonq is started menually, it restores the last opened tabs, so far so good. But when it's started for the first time by clicking on a link in another application, only the clicked link is opened, tabs are not restored, so I lose all my open tabs.

Reproducible: Always

Steps to Reproduce:
1. Start rekonq by clicking on a link in another application.
Actual Results:  
The link is opened, but tabs are not restored.

Expected Results:  
In addition to opening the link on a new tab, all the tabs from the previous session should be reopened.

Setting severity to critical since it causes data loss. Otherwise it's a minor bug.
Comment 1 Andrea Diamantini 2012-06-20 09:42:09 UTC
Git commit 91f8f4b5c825c99c77b79fa0cfa692d477760539 by Andrea Diamantini.
Committed on 20/06/2012 at 11:41.
Pushed by adjam into branch 'master'.

Remember to restore all tabs (when needed) also with external arguments
calls (eg: open link with rekonq in konqueror)

WARNING: Needs testing

M  +7    -3    src/application.cpp

http://commits.kde.org/rekonq/91f8f4b5c825c99c77b79fa0cfa692d477760539