Remember to restore all tabs (when needed) also with external arguments calls (eg: open link with rekonq in konqueror)

WARNING: Needs testing

BUG: 299625